ajout squelette des pages restantes

--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -20,6 +20,15 @@
   }
 }
 
+.header {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header a {
+  padding: 0 10px;
+}
+
 .vote-film-list {
   float: left;
 }
