--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -20,13 +20,48 @@
   }
 }
 
+body {
+    background-image: url("http://simpledesktops.com/download/?desktop=4723");
+    background-size: contain;
+}
+
 .header {
   display: flex;
   flex-wrap: wrap;
 }
 
 .header a {
-  padding: 0 10px;
+  text-align:center;
+  text-decoration: none;
+  font-family: sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-size: 150%;
+  color: #FFF;
+  background: #0CADA7;
+  padding: 10px 15px;
+  display: inline-block;
+  white-space: nowrap;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  margin: 10px 10px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.header a:hover {
+  background: #0A948F;
+}
+
+.header a#profil {
+    color: #2da1c1;
+    font-size: small;
+    text-decoration: none;
+    position: absolute;
+    right: 0;
 }
 
 .titre-affiche {
