--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -18,9 +18,12 @@
     margin:auto;
   }
 }
-@media screen and (max-width: 1300px) and  (max-height: 640px){
+@media screen and (max-width: 1400px), screen and (max-height: 640px){
   .film-gros{
     display:none;
+  }
+  div.details {
+    width: 100%;
   }
 }
 
@@ -119,7 +122,7 @@ ul {
   padding-left: 20px;
 }
 .details {
-  width: 20%;
+  width: 50%;
   padding: 0px 10%;
 }
 
